# MinecraftSkinEditor

./: .gitignore  Cargo.toml  Makefile  README.md
resources/: mcskineditor.gresource.xml
resources/css/: style.css
resources/models/: README.md
resources/shaders/: fragment.glsl  vertex.glsl
resources/shaders/face-indicator/: fragment.glsl  vertex.glsl
resources/shaders/face-indicator/gl/: fragment.glsl  vertex.glsl
resources/shaders/face-indicator/gles/: fragment.glsl  vertex.glsl
resources/shaders/gl/: fragment.glsl  vertex.glsl
resources/shaders/gles/: fragment.glsl  vertex.glsl
resources/ui/: model-switcher.ui  palette.ui  skin-dialog.ui  skin-loader-popover.ui  skin_dialog.ui  template-widget-item.ui  templates-list.ui  tiny-button.ui  window.ui
src/: application.rs  command.rs  editor_host.rs  editor_session.rs  main.rs  model_switcher.rs  skin_dialog.rs  skin_loader_popover.rs  template_list.rs  template_widget_item.rs  utils.rs  window.rs
src/application/: imp.rs  mod.rs
src/glium_area/: body_part.rs  camera.rs  cross_info.rs  cube_side.rs  hover.rs  hover_state.rs  imp.rs  input.rs  mod.rs  model_object.rs  mouse_move.rs  pick.rs  ray.rs  renderer.rs  skin_parser.rs  vertex.rs
src/glium_area/model/: arm_fn.rs  body_fn.rs  export_obj.rs  head_fn.rs  meshes.rs  mod.rs  obj_loader.rs
src/glium_area/skin_dialog/: imp.rs  mod.rs
src/model_switcher/: imp.rs  mod.rs
src/palette/: imp.rs  mod.rs
src/template_list/: imp.rs  mod.rs
src/template_widget_item/: imp.rs  mod.rs
src/window/: drawing_history.rs  imp.rs  mod.rs
src/window/signals/: file_io.rs  grid.rs  mod.rs  model_switcher.rs  reset_skin.rs  tools.rs  wardrobe.rs
