[package]
name = "mc-skin-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = { git = "https://github.com/glium/glium.git" }
gl_loader = "0.1.2"
epoxy = "0.1.0"
libloading = "0.8.0"
gtk = { package = "gtk4", version = "0.7.3" }
nalgebra-glm = "0.18.0"
image = "0.24.6"
log = "0.4.19"
env_logger = "0.10.0"
#serde = "1.0.189"
#serde_derive = "1.0.189"
libadwaita = "0.5.3"