[package]
name = "mc-skin-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = "0.34.0"
gl_loader = "0.1.2"
epoxy = "0.1.0"
libloading = "0.8.0"
gtk = { package = "gtk4", version = "0.9.0", features = ["v4_14"] }
gvdb-macros = "0.1.10"
nalgebra-glm = "0.18.0"
image = "0.25.1"
log = "0.4.19"
env_logger = "0.11.3"
serde = "1.0.203"
serde_derive = "1.0.203"
libadwaita = { version = "0.7.0", features = ["v1_5"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = "1.37.0"
bytes = "1.6.0"
async-channel = "2.2.1"
dirs = "5.0.1"
rand = "0.9.0-alpha.1"
lazy_static = "1.4.0"
