[package]
name = "mc-skin-editor"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[dependencies]
glium = "0.34.0"
gl_loader = "0.1.2"
epoxy = "0.1.0"
libloading = "0.8.0"
gtk = { package = "gtk4", version = "0.11", features = ["v4_16"] }
gvdb-macros = "0.1.10"
nalgebra-glm = "0.18.0"
image = "0.25.1"
log = "0.4.19"
env_logger = "0.11.3"
serde = "1.0.203"
serde_derive = "1.0.203"
libadwaita = { version = "0.9", features = ["v1_6", "gtk_v4_6"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "sync", "time"] }
bytes = "1.6.0"
async-channel = "2.2.1"
dirs = "5.0.1"
rand = "0.9"
lazy_static = "1.4.0"
